@@ -779,6 +779,7 @@ This section deals with the connections to the CW servers, and everything relate
 <a name="connection-manager/reconnect-interval">
 <div class='indent'>connection-manager/reconnect-interval</div><br />
 The interval between connection attempts (in seconds) for servers that are not are not connected. Applies to all CWS connectors. Minimum interval is 5 seconds (anything lower becomes 5).<br />
+<strong>NOTE: </strong>If you have connectors that sporadically seem to get stuck and never reconnect, it is very likely means you have this set too low. <br />
 <br />
 </a>
 
