@@ -262,8 +262,8 @@ public class ChameleonCwsConnector extends NewcamdCwsConnector implements MultiC
 
   public void cwsConnectionFailed(CwsConnector cws, String message) {}
   public void cwsEcmTimeout(CwsConnector cws, String message, int failureCount) {}
-  public void cwsLostService(CwsConnector cws, TvService service) {}
-  public void cwsFoundService(CwsConnector cws, TvService service) {}
+  public void cwsLostService(CwsConnector cws, TvService service, boolean show) {}
+  public void cwsFoundService(CwsConnector cws, TvService service, boolean show) {}
   public void cwsInvalidCard(CwsConnector cws, String message) {}
 
   public void cwsProfileChanged(CaProfile profile, boolean added) {
